Separação das intefaces baseada no tipo do usuário e estilização com temas

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Tue Feb 17 18:35:42 CET 2009
 eclipse.preferences.version=1
+encoding//app/views/Requerimentos/form.html=UTF-8
+encoding//app/views/Requerimentos/listar.html=UTF-8
+encoding//public/architectui-html-free/architectui-html-free/main.css=UTF-8
 encoding/<project>=UTF-8
