--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-application.name=SistemaDeRequerimentos
+application.name=SEACAR
 
 # Application mode
 # ~~~~~
@@ -173,7 +173,12 @@ attachments.path=data/attachments
 # Mail configuration
 # ~~~~~ 
 # Default is to use a mock Mailer
-mail.smtp=mock
+#mail.smtp=mock
+
+mail.smtp.host=smtp.gmail.com
+mail.smtp.user=srnegobam@gmail.com
+mail.smtp.pass=negobamjedimaster
+mail.smtp.channel=ssl
 
 # Or, specify mail host configuration
 # mail.smtp.host=127.0.0.1
